fix invisibles styles

--- a/scss/components/_popup.scss
+++ b/scss/components/_popup.scss
@@ -20,7 +20,7 @@
 
    visibility: visible;
    opacity: 1;
-   background-color: rgba(0,0,0,0.5);
+   background-color: rgba(0,0,0,0.8);
    position: fixed;
    top:0;
    left:0;
